# DesertBreadProto

./: .envrc.example  .gitignore  .yamllint.yml  BOOTSTRAP-PROMPT.md  CLAUDE.md  Cargo.toml  README.docx  README.md
.github/workflows/: ci.yml
config/spire/: agent.conf  server.conf
config/zenoh/: cloud-router.json5  cp-router.json5  mft-client.json5
crates/fabric-cli/: Cargo.toml
crates/fabric-cli/src/: main.rs
crates/meshd/: Cargo.toml
crates/meshd/src/: discovery.rs  ipc.rs  lib.rs  main.rs  overlay_ip.rs  peer.rs  protocol.rs  spire.rs  tunnel.rs  wireguard.rs  zenoh_fabric.rs
crates/meshd/tests/: island_mode.rs  lan_discovery.rs
crates/provision/: Cargo.toml
crates/provision/src/: bundle.rs  main.rs
docs/: architecture-diagrams.md
docs/adr/: 001-iroh-over-nebula.md  002-wireguard-bootstrap-via-iroh.md  003-spire-per-site-federation.md  004-kanidm-over-ory-dex.md  005-norm-for-lan-multicast.md  006-deterministic-overlay-ip.md
ops/docker/: Dockerfile.meshd  Dockerfile.spire  dev-compose.yml
ops/docker/spire-dev/: server.conf
ops/scripts/: export-diagrams-pdf.sh  root-ca-ceremony.sh
terraform/: backend.tf  main.tf  outputs.tf  variables.tf
terraform/modules/relay/: main.tf
