[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
# iroh stack
iroh = { version = "0.97", features = ["address-lookup-mdns"] }
iroh-gossip = "0.97"
iroh-relay = "0.97"
iroh-blobs = "0.99"
n0-future = "0.3"

# async runtime
tokio = { version = "1", features = ["full"] }

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postcard = { version = "1", features = ["alloc"] }

# crypto
sha2 = "0.10"
rand = "0.9"

# CLI
clap = { version = "4", features = ["derive"] }

# error handling
anyhow = "1"
thiserror = "2"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# bytes
bytes = "1"
