[package]
name = "meshd"
description = "iroh-WireGuard bridge daemon for tactical mesh networking"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
iroh.workspace = true
iroh-gossip.workspace = true
n0-future.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
postcard.workspace = true
sha2.workspace = true
rand.workspace = true
clap.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bytes.workspace = true

[dev-dependencies]
sha2.workspace = true
rand.workspace = true
tokio = { workspace = true, features = ["test-util"] }
